--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
       "react/no-unused-prop-types": 0,
+      "react/no-array-index-key": "warn",
       "react/require-default-props": 0,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
@@ -220,6 +221,8 @@
     "clean-tag": "^1.0.4",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
+    "d3": "^4.13.0",
+    "d3-scale-chromatic": "^1.2.0",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "grid-styled": "^3.2.1",
