--- a/package.json
+++ b/package.json
@@ -226,6 +226,7 @@
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "grid-styled": "^3.2.1",
+    "hammerjs": "^2.0.8",
     "history": "4.6.3",
     "hoist-non-react-statics": "2.1.1",
     "immutable": "3.8.1",
@@ -247,6 +248,7 @@
     "redux": "3.6.0",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.15.3",
+    "rematrix": "^0.2.2",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
