--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
     "rematrix": "^0.2.2",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
+    "smoothscroll-polyfill": "^0.4.3",
     "styled-components": "2.0.0",
     "styled-system": "^2.2.1",
     "warning": "3.0.0",
