--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.23.0",
+    "bowser": "^1.9.3",
     "chalk": "1.1.3",
     "clean-tag": "^1.0.4",
     "compression": "1.6.2",
