--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy": "firebase deploy --only hosting"
   },
   "lint-staged": {
     "*.js": "lint:eslint"
