--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,20 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          { "key": "X-Frame-Options", "value": "DENY" },
+          { "key": "X-Content-Type-Options", "value": "nosniff" },
+          { "key": "X-XSS-Protection", "value": "1" },
+          {
+            "key": "Content-Security-Policy",
+            "value": "script-src 'self' https://www.google-analytics.com https://*.firebaseio.com https://apis.google.com https://amp.cloudflare.com https://connect.facebook.net; object-src 'none'; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+          }
+        ]
+      }
     ]
   }
 }
