--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "react": "15.6.1",
     "react-container-dimensions": "^1.3.3",
     "react-dom": "15.6.1",
+    "react-ga": "^2.4.1",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
