added firebase database sync

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,10 @@
     ],
     "rewrites": [
       {
+        "source": "/data/userAgent",
+        "function": "setUserAgentData"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
