--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.10.0",
+    "cors": "^2.8.4",
+    "firebase-admin": "^5.10.0",
     "firebase-functions": "^0.9.0"
   },
   "private": true
