--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
-    "firebase-admin": "^5.10.0",
-    "firebase-functions": "^0.9.0"
+    "firebase-admin": "6.0.0",
+    "firebase-functions": "^2.0.5"
   },
   "private": true
 }
