--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
-    "firebase-admin": "6.0.0",
-    "firebase-functions": "^2.0.5"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^2.3.1"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
