fix deps security alerts

--- a/package.json
+++ b/package.json
@@ -282,8 +282,9 @@
     "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "clean-css": "^4.1.11",
+    "braces": "2.3.1",
     "circular-dependency-plugin": "3.0.0",
+    "clean-css": "^4.1.11",
     "copy-webpack-plugin": "^4.2.0",
     "coveralls": "2.13.1",
     "css-loader": "0.28.4",
@@ -300,16 +301,21 @@
     "exports-loader": "0.6.4",
     "file-loader": "0.11.1",
     "fstream": "1.0.12",
+    "handlebars": "4.0.14",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
     "image-webpack-loader": "2.0.0",
     "imports-loader": "0.7.1",
+    "is-my-json-valid": "2.17.2",
     "jest-cli": "20.0.4",
+    "js-yaml": "3.13.1",
     "lint-staged": "3.5.1",
+    "macaddress": "0.2.9",
     "marked": "0.3.18",
     "ngrok": "2.2.9",
     "node-plop": "0.7.0",
     "null-loader": "0.1.1",
+    "nwmatcher": "1.4.4",
     "offline-plugin": "4.8.1",
     "on-build-webpack": "^0.1.0",
     "plop": "1.8.0",
